--- a/src/app/posts/pages/post-details/post-details.component.html
+++ b/src/app/posts/pages/post-details/post-details.component.html
@@ -1,3 +1,15 @@
-POST DETALJI !!!!
+@let post = post$ | async;
 
-
+@if (post) {
+  <div class="container">
+    <mat-card appearance="outlined" class="card">
+      <mat-card-header>
+        <mat-card-title>{{ post.title }}</mat-card-title>
+        <mat-card-subtitle class="subtitle">Post id: {{ post.id }}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p class="body">{{ post.body }}</p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+}
