--- a/src/app/core/layout/app-layout.component.scss
+++ b/src/app/core/layout/app-layout.component.scss
@@ -6,7 +6,6 @@
     box-shadow:
         0 2px 6px color-mix(in oklab, var(--mat-sys-outline) 18%, transparent),
         0 1px 0 color-mix(in oklab, var(--mat-sys-outline) 24%, transparent);
-    margin-bottom: 60px;
 }
 
 .row { 
@@ -22,6 +21,15 @@
     font-size: 25px; 
     opacity: 0.95; 
     padding-top: 0px; 
+}
+
+.actions-container {
+  height: 60px;
+}
+
+.back {
+  margin-top: 30px;
+  margin-left: 40px;
 }
 
 
