--- a/src/app/posts/pages/posts-list/posts-list.component.scss
+++ b/src/app/posts/pages/posts-list/posts-list.component.scss
@@ -7,7 +7,7 @@
 
 .item,
 .empty {
-  margin-top: 15px;
+  margin-bottom: 15px;
   cursor: pointer;
   transition: background-color 160ms ease, transform 120ms ease;
   &:hover {
