Code refactoring, constants moved, unnecessary code deleted…

--- a/src/app/core/layout/app-layout.component.html
+++ b/src/app/core/layout/app-layout.component.html
@@ -8,10 +8,10 @@
 </mat-toolbar>
 <div class="actions-container">
     @if (showBack()) {
-        <button extended matButton="outlined" class="back" (click)="back()">
-            <mat-icon>arrow_back</mat-icon>
+        <button mat-stroked-button class="back" aria-label="Go back" (click)="back()">
+            <mat-icon aria-hidden="true">arrow_back</mat-icon>
             Back
-        </button>
+          </button>
     }
 </div>
 
