--- a/src/app/posts/pages/post-details/post-details.component.scss
+++ b/src/app/posts/pages/post-details/post-details.component.scss
@@ -26,6 +26,9 @@
   color: var(--mat-sys-error);
 }
 
+.skeleton-line {
+  height: 1em;
+}
 .skeleton-line::before {
   content: '';
   display: block;
