--- a/src/app/posts/pages/post-details/post-details.component.html
+++ b/src/app/posts/pages/post-details/post-details.component.html
@@ -3,7 +3,7 @@
 @let error = $error();
 
 @if (loading) {
-  <div class="container">
+  <div class="container" aria-busy="true">
     <mat-card appearance="outlined" class="card">
       <mat-card-header>
         <div class="skeleton-line skeleton-title"></div>
@@ -15,7 +15,7 @@
   </div>
 } @else if (error) {
   <div class="container">
-    <mat-card appearance="outlined" class="card error">Failed to load post. Please try again.</mat-card>
+    <mat-card role="alert" appearance="outlined" class="card error">Failed to load post. Please try again.</mat-card>
   </div>
 } @else if (post) {
   <div class="container">
