--- a/src/app/core/layout/app-layout.component.html
+++ b/src/app/core/layout/app-layout.component.html
@@ -3,18 +3,21 @@
     <h1 class="title">Posts App</h1>
   </mat-toolbar-row>
   <mat-toolbar-row class="row">
-    <div class="subtitle">{{ $subtitle() }}</div>
+    <span class="subtitle">{{ $subtitle() }}</span>
   </mat-toolbar-row>
 </mat-toolbar>
 <div class="actions-container">
-    @if (showBack()) {
-        <button mat-stroked-button class="back" aria-label="Go back" (click)="back()">
-            <mat-icon aria-hidden="true">arrow_back</mat-icon>
-            Back
-          </button>
-    }
+  @if (showBack()) {
+    <button
+      mat-stroked-button
+      class="back"
+      aria-label="Go back"
+      (click)="back()"
+    >
+      <mat-icon aria-hidden="true">arrow_back</mat-icon>
+      Back
+    </button>
+  }
 </div>
 
 <router-outlet />
-
-
