--- a/src/app/core/layout/app-layout.component.scss
+++ b/src/app/core/layout/app-layout.component.scss
@@ -1,35 +1,34 @@
 .toolbar {
-    position: sticky;
-    top: 0;
-    z-index: 1;  
-    border-bottom: 1px solid color-mix(in oklab, var(--mat-sys-outline) 40%, transparent);
-    box-shadow:
-        0 2px 6px color-mix(in oklab, var(--mat-sys-outline) 18%, transparent),
-        0 1px 0 color-mix(in oklab, var(--mat-sys-outline) 24%, transparent);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  border-bottom: 1px solid
+    color-mix(in oklab, var(--mat-sys-outline) 40%, transparent);
+  box-shadow:
+    0 2px 6px color-mix(in oklab, var(--mat-sys-outline) 18%, transparent),
+    0 1px 0 color-mix(in oklab, var(--mat-sys-outline) 24%, transparent);
 }
 
-.row { 
-    justify-content: center; 
+.row {
+  justify-content: center;
 }
 
-.title { 
-    font-weight: 600; 
-    font-size: 35px; 
-    padding-top: 30px; 
+.title {
+  font-weight: 600;
+  font-size: 35px;
+  padding-top: 30px;
 }
-.subtitle { 
-    font-size: 25px; 
-    opacity: 0.95; 
-    padding-top: 0px; 
+.subtitle {
+  font-size: 25px;
+  opacity: 0.95;
+  padding-top: 0px;
 }
 
 .actions-container {
-  height: 60px;
+  height: 80px;
 }
 
 .back {
-  margin-top: 30px;
+  margin-top: 20px;
   margin-left: 40px;
 }
-
-
