--- a/src/app/posts/pages/post-details/post-details.component.html
+++ b/src/app/posts/pages/post-details/post-details.component.html
@@ -15,14 +15,18 @@
   </div>
 } @else if (error) {
   <div class="container">
-    <mat-card role="alert" appearance="outlined" class="card error">Failed to load post. Please try again.</mat-card>
+    <mat-card role="alert" appearance="outlined" class="card error"
+      >Failed to load post. Please try again.</mat-card
+    >
   </div>
 } @else if (post) {
   <div class="container">
     <mat-card appearance="outlined" class="card">
       <mat-card-header>
         <mat-card-title>{{ post.title }}</mat-card-title>
-        <mat-card-subtitle class="subtitle">Post id: {{ post.id }}</mat-card-subtitle>
+        <mat-card-subtitle class="subtitle"
+          >Post id: {{ post.id }}</mat-card-subtitle
+        >
       </mat-card-header>
       <mat-card-content>
         <p class="body">{{ post.body }}</p>
