--- a/src/app/posts/pages/post-details/post-details.component.scss
+++ b/src/app/posts/pages/post-details/post-details.component.scss
@@ -30,23 +30,21 @@
   height: 1em;
 }
 .skeleton-line::before {
-  content: '';
+  content: "";
   display: block;
   height: 100%;
   background: color-mix(in oklab, var(--mat-sys-on-surface) 10%, transparent);
   border-radius: 4px;
 }
 
-.skeleton-title { 
-  height: 24px; 
-  width: 60%; 
+.skeleton-title {
+  height: 24px;
+  width: 60%;
   margin-top: 4px;
 }
 
-.skeleton-body { 
-  height: 14px; 
-  width: 100%; 
+.skeleton-body {
+  height: 14px;
+  width: 100%;
   margin-top: 24px;
 }
-
-
